--- a/search.html
+++ b/search.html
@@ -192,7 +192,7 @@
         <header>
             <img style="height: 100px;margin-top: 5px;max-width: 100%;" src="src/logo.png" />
             <div class="tab active input-group">
-                <input type="text" placeholder="在此搜索" id="search-input">
+                <input type="text" placeholder="在此搜索（目前仅支持搜索标题哦）" id="search-input">
                 <button class="btn-search" id="btn-search">搜索</button>
             </div>
         </header>
