--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </div>
             <div class="tabs">
                 <div class="tab active input-group">
-                    <input id="search-input" type="text" placeholder="在此搜索">
+                    <input id="search-input" type="text" placeholder="在此搜索（目前仅支持搜索标题哦）">
                     <button class="btn-search">搜索</button>
                 </div>
                 <div class="tab input-group">
@@ -202,6 +202,7 @@
             </div>
         </div>
         <p>【瑞典路透社1145年1月4日讯】近日，MCBBS 在与科比进行的复活赛中胜出，现在牢玩家们可以在这个网站上搜索 MCBBS 的帖子记录。致敬传奇论坛 MCBBS！</p>
+        <p style="font-size:small;color:#3f3f3f">因为没有搜索服务器，目前的搜索需要下载约 60m 的索引文件，各位可以耐心等待。如果有愿意出服务器做搜索 API 的，请和我们联系。谢谢大家的支持！</p>
         <img style="width: 100%;max-width: 100%;" src="src/ed85e90.jpg" />
     </div>
     <script>
