--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>MCBBS 复活赛</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        .bg {
-            background-image: url('src/body_bg.jpg');
-            position: fixed;
-            z-index: -1;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-        }
-
         .container {
             margin: auto;
             max-width: 80%;
@@ -34,105 +26,6 @@
             padding: 0.25rem 0.75rem;
         }
 
-        .notice {
-            padding: 1em;
-            background-color: rgb(234, 47, 19);
-            color: aliceblue;
-        }
-
-        .tabs .tab {
-            display: none;
-        }
-
-        .tabs .tab.active {
-            display: flex;
-        }
-
-        .search-container {
-            width: 80%;
-        }
-
-        .nav-tabs {
-            display: flex;
-            flex-direction: row;
-            font-size: large;
-            font-weight: bold;
-            margin-bottom: 0.3rem;
-        }
-
-        .nav-tabs .nav-item {
-            background-color: #ffffff89;
-            margin-right: 0.3em;
-            border: 2px solid #333;
-            border-radius: 5px;
-            padding: 0.2rem 0.8rem;
-        }
-
-        .nav-item {
-            display: block;
-            padding: 0.5rem 1rem;
-            color: #333;
-            text-decoration: none;
-        }
-
-        .nav-item:hover {
-            color: #444;
-            background-color: transparent;
-        }
-
-        .nav-item.active {
-            color: #fff;
-            background-color: #333;
-        }
-
-        .tabs {
-            width: 100%;
-        }
-
-        .input-group {
-            display: flex;
-            width: 100%;
-            flex-direction: row;
-        }
-
-        .input-group input {
-            background: #ffffff89;
-            flex: auto;
-            width: 1px;
-            font:
-                1.4em/1.5em "handwriting",
-                cursive,
-                sans-serif;
-            border: 2px solid #333;
-            border-radius: 5px 0 0 5px;
-            padding: 0 10px;
-            margin: 0;
-            height: 3rem;
-        }
-
-        .input-group button {
-            background: #ffffff89;
-            width: 4.8rem;
-            flex-shrink: 0;
-            padding: 0 10px;
-            margin: 0;
-            font: bold 1.4em/1.5em sans-serif;
-            border: 2px solid #333;
-            border-left: 0;
-            border-radius: 0 5px 5px 0;
-            cursor: pointer;
-        }
-
-        .input-group button:hover,
-        .input-group button:focus {
-            background: #000;
-            color: #fff;
-        }
-
-        .hidden {
-            display: none;
-        }
-
         @media only screen and (max-width: 768px) {
             .container {
                 max-width: 100%;
@@ -141,6 +34,51 @@
 
             .search-container {
                 width: 100%;
+            }
+
+            @media only screen and (max-width: 768px) {
+                .container {
+                    max-width: 100%;
+                    margin-top: 0;
+                }
+
+                .search-container {
+                    width: 100%;
+                }
+
+                .nav-tabs {
+                    justify-content: center;
+                }
+            }
+
+            @media only screen and (min-width: 769px) and (max-width: 1024px) {
+                .container {
+                    max-width: 75%;
+                    margin: 0 auto;
+                }
+
+                .search-container {
+                    width: 100%;
+                }
+
+                h1 {
+                    margin: 2rem 0;
+                }
+            }
+
+            @media only screen and (min-width: 1025px) {
+                .container {
+                    max-width: 65%;
+                    margin: 0 0 auto 10rem;
+                }
+
+                h1 {
+                    margin: 4.5rem 0;
+                }
+
+                .search-container {
+                    width: 80%;
+                }
             }
 
             .nav-tabs {
@@ -187,8 +125,8 @@
         <div class="notice hidden"></div>
         <div class="search-container">
             <div class="nav-tabs">
-                <div class="nav-item active">搜索</div>
-                <div class="nav-item">跳转</div>
+                <button class="nav-item active">搜索</button>
+                <button class="nav-item">跳转</button>
             </div>
             <div class="tabs">
                 <div class="tab active input-group">
@@ -202,7 +140,8 @@
             </div>
         </div>
         <p>【瑞典路透社1145年1月4日讯】近日，MCBBS 在与科比进行的复活赛中胜出，现在牢玩家们可以在这个网站上搜索 MCBBS 的帖子记录。致敬传奇论坛 MCBBS！</p>
-        <p style="font-size:small;color:#3f3f3f">因为没有搜索服务器，目前的搜索需要下载约 60m 的索引文件，各位可以耐心等待。如果有愿意出服务器做搜索 API 的，请和我们联系。谢谢大家的支持！</p>
+        <p style="font-size:small;color:#3f3f3f">因为没有搜索服务器，目前的搜索需要下载约 17m 的索引文件，各位可以耐心等待。如果有愿意出服务器做搜索 API
+            的，请和我们联系。谢谢大家的支持！</p>
         <img style="width: 100%;max-width: 100%;" src="src/ed85e90.jpg" />
     </div>
     <script>
@@ -237,13 +176,13 @@
                 jumpTo(URL);
             };
             btnSearch.addEventListener('click', jumpSearch);
-            document.querySelector('#search-input').onkeydown =  (event) => {
+            document.querySelector('#search-input').onkeydown = (event) => {
                 if (event.key === 'Enter') {
                     jumpSearch();
                 }
             };;
 
-            const jumpThread =  () => {
+            const jumpThread = () => {
                 const input = btnJump.parentElement.querySelector('#jump-input');
                 const text = input.value;
                 if (!/^[0-9]+$/.test(text)) {
@@ -255,12 +194,12 @@
                 jumpTo(URL)
             }
             btnJump.addEventListener('click', jumpThread);
-            document.querySelector('#jump-input').onkeydown =  (event) => {
+            document.querySelector('#jump-input').onkeydown = (event) => {
                 if (event.key === 'Enter') {
                     jumpThread();
                 }
             };
-            
+
         });
 
     </script>
