--- a/thread.html
+++ b/thread.html
@@ -4,20 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Theard View</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        .bg {
-            background-image: url('src/body_bg.jpg');
-            position: fixed;
-            z-index: -1;
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            top: 0;
-            left: 0;
-        }
-
         #loading {
             position: fixed;
             top: 50%;
@@ -32,6 +22,7 @@
         }
 
         #slot {
+            overflow-x: scroll;
             margin: 0 auto;
             padding: 20px 45px;
             box-sizing: border-box;
@@ -56,26 +47,6 @@
         @media only screen and (min-width: 1025px) {
             #slot {
                 max-width: 80%;
-            }
-        }
-
-        .loading-icon {
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-left-color: #333;
-            /* Change color as needed */
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
             }
         }
     </style>
@@ -120,6 +91,11 @@
                 document.querySelector('#slot').textContent = err;
             }
             document.getElementById('loading').style.display = 'none';
+            const h1 = document.querySelector('#slot h1');
+            h1.style.cursor = 'pointer';
+            h1.addEventListener('click', () => {
+                window.history.back();
+            })
         })();
     </script>
 </body>
