--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <p>【瑞典路透社1145年1月4日讯】近日，MCBBS 在与科比进行的复活赛中胜出，现在牢玩家们可以在这个网站上搜索 MCBBS 的帖子记录。致敬传奇论坛 MCBBS！</p>
         <p style="font-size:small;color:#3f3f3f">因为没有搜索服务器，目前的搜索需要下载约 17m 的索引文件，各位可以耐心等待。如果有愿意出服务器做搜索 API
-            的，请和我们联系。谢谢大家的支持！</p>
+            的，请和我们联系。谢谢大家的支持！邮箱：<a href="mailto:y4xajhb10@relay.firefox.com">y4xajhb10@relay.firefox.com</a></p>
         <img style="width: 100%;max-width: 100%;" src="src/ed85e90.jpg" />
     </div>
     <script>
