--- a/index.html
+++ b/index.html
@@ -36,54 +36,20 @@
                 width: 100%;
             }
 
-            @media only screen and (max-width: 768px) {
-                .container {
-                    max-width: 100%;
-                    margin-top: 0;
-                }
-
-                .search-container {
-                    width: 100%;
-                }
-
-                .nav-tabs {
-                    justify-content: center;
-                }
-            }
-
-            @media only screen and (min-width: 769px) and (max-width: 1024px) {
-                .container {
-                    max-width: 75%;
-                    margin: 0 auto;
-                }
-
-                .search-container {
-                    width: 100%;
-                }
-
-                h1 {
-                    margin: 2rem 0;
-                }
-            }
-
-            @media only screen and (min-width: 1025px) {
-                .container {
-                    max-width: 65%;
-                    margin: 0 0 auto 10rem;
-                }
-
-                h1 {
-                    margin: 4.5rem 0;
-                }
-
-                .search-container {
-                    width: 80%;
-                }
-            }
-
             .nav-tabs {
                 justify-content: center;
             }
+
+            @media only screen and (max-width: 768px) {
+
+
+                .search-container {
+                    width: 100%;
+                }
+
+
+            }
+
         }
 
         @media only screen and (min-width: 769px) and (max-width: 1024px) {
@@ -140,7 +106,9 @@
             </div>
         </div>
         <p>【瑞典路透社1145年1月4日讯】近日，MCBBS 在与科比进行的复活赛中胜出，现在牢玩家们可以在这个网站上搜索 MCBBS 的帖子记录。致敬传奇论坛 MCBBS！</p>
-        <p style="font-size:small;color:#3f3f3f">因为没有搜索服务器，目前的搜索需要下载约 17m 的索引文件，各位可以耐心等待。如果有愿意出服务器做搜索 API
+        <p style="font-size:small;color:#3f3f3f">因为没有搜索服务器，目前的搜索仅支持标题，并需要需要下载约 17m 的索引文件，各位可以耐心等待。<br>
+            文章存档源文件在 <a
+                href="https://github.com/bbs-archive/mcbbs">https://github.com/bbs-archive/mcbbs</a>。如果有愿意出服务器做全文搜索 API
             的，请和我们联系。谢谢大家的支持！邮箱：<a href="mailto:y4xajhb10@relay.firefox.com">y4xajhb10@relay.firefox.com</a></p>
         <img style="width: 100%;max-width: 100%;" src="src/ed85e90.jpg" />
     </div>
