把“请大家给个star或者分享”写在了主页

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             </div>
         </div>
         <p>【瑞典路透社1145年1月4日讯】近日，MCBBS 在与科比进行的复活赛中胜出，现在牢玩家们可以在这个网站上搜索 MCBBS 的帖子记录。致敬传奇论坛 MCBBS！</p>
+        <p>如果您喜欢我们的网站，请到<a href="https://github.com/bbs-archive/bbs-archive.github.io">我们的github仓库</a>给我们点个star，或者将这个网站分享给你的好友！</p>
         <p style="font-size:small;color:#3f3f3f">因为没有搜索服务器，目前的搜索仅支持标题，并需要需要下载约 17m 的索引文件，各位可以耐心等待。<br>
             文章存档源文件在 <a
                 href="https://github.com/bbs-archive/mcbbs">https://github.com/bbs-archive/mcbbs</a>。如果有愿意出服务器做全文搜索 API
